--- a/app/src/main/res/layout/calendario_maestro.xml
+++ b/app/src/main/res/layout/calendario_maestro.xml
@@ -8,7 +8,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="55dp">
+        android:layout_marginTop="55dp"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="INDICACIONES"
+            android:textAlignment="center"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/indicacionescalendario"
+            />
     <CalendarView
         android:id="@+id/calendar"
         android:layout_width="match_parent"
