--- a/app/src/main/res/drawable/spinner_style.xml
+++ b/app/src/main/res/drawable/spinner_style.xml
@@ -4,7 +4,7 @@
     <layer-list>
         <item>
             <shape android:shape="rectangle">
-                <solid android:color="@color/atarraya"/>
+                <solid android:color="#5FACEC"/>
                 <corners android:radius="10dp"/>
                 <padding android:right="10dp"/>
             </shape>
