--- a/app/src/main/res/layout/activity_crear_aviso_maestro.xml
+++ b/app/src/main/res/layout/activity_crear_aviso_maestro.xml
@@ -4,8 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".layout.reporteAsistencia">
-
+    tools:context=".layout.crearAviso_maestro">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <LinearLayout
         android:layout_width="411dp"
         android:layout_height="674dp"
@@ -22,13 +25,13 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_reporteasistencia"
+                android:id="@+id/tv_crearaviso"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="REPORTE ASISTENCIA"
+                android:text="CREADOR DE AVISOS"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -48,19 +51,13 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tv_indicacionesAviso"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="NIE:"
+                android:text="@string/indicaciones_crearAviso"
                 android:textColor="@color/oscuro"
                 android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/tv_nie"
-                android:layout_width="225dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="12345566" />
 
         </LinearLayout>
 
@@ -73,17 +70,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="NOMBRE:"
+                android:text="Título del Aviso:"
                 android:textColor="@color/oscuro"
                 android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/tv_nombrealumno"
+            <EditText
+                android:id="@+id/tv_nombreaviso"
                 android:layout_width="225dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="Tyler Joshep" />
+                android:hint="Escriba aquí"
+                android:maxLength="50"/>
 
         </LinearLayout>
 
@@ -97,7 +94,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="SELECCIONE UNA OPCIÓN :"
+                android:text="CONTENIDO"
                 android:textColor="@color/oscuro"
                 android:textSize="18sp" />
 
@@ -107,12 +104,29 @@
                 android:layout_height="1dp"
                 android:layout_marginTop="15dp"
                 android:background="@color/atarraya" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="MENSAJE :"
+                android:textColor="@color/oscuro"
+                android:textSize="18sp" />
+
+            <EditText
+                android:id="@+id/et_mensajeaviso"
+                android:layout_width="match_parent"
+                android:layout_height="215dp"
+                android:ems="40"
+                android:gravity="start|top"
+                android:inputType="textMultiLine"
+                android:padding="5dp"
+                android:background="@drawable/border"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="¿FALTÓ EL ALUMNO A CLASES? "
+                android:text="Estado del Aviso "
                 android:textColor="@color/oscuro"
                 android:textSize="18sp" />
 
@@ -123,36 +137,18 @@
                 android:orientation="horizontal">
 
                 <RadioButton
-                    android:id="@+id/rbtn_opcSi"
+                    android:id="@+id/rbtn_opcActivado"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="SI" />
+                    android:text="Activado" />
 
                 <RadioButton
-                    android:id="@+id/rbtn_opcNo"
+                    android:id="@+id/rbtn_opcDesactivado"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="NO" />
+                    android:text="Desactivado" />
             </RadioGroup>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:text="OBSERVACIONES :"
-                android:textColor="@color/oscuro"
-                android:textSize="18sp" />
-
-            <EditText
-                android:id="@+id/et_observacionesasistencia"
-                android:layout_width="match_parent"
-                android:layout_height="215dp"
-                android:ems="40"
-                android:padding="5dp"
-                android:gravity="start|top"
-                android:inputType="textMultiLine"
-                android:background="@drawable/border"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -160,19 +156,19 @@
             android:orientation="horizontal"
             android:gravity="center">
             <Button
-                android:id="@+id/btn_guardarreporte"
+                android:id="@+id/btn_guardaraviso"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="GUARDAR REPORTE"
+                android:text="GUARDAR AVISO"
                 android:background="@drawable/rounded_edittext_focused"
                 android:backgroundTint="@color/atarraya"
                 android:padding="5dp"
                 android:textColor="@color/blanco"/>
             <Button
-                android:id="@+id/btn_cancelarreporte"
+                android:id="@+id/btn_cancelaraviso"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="CANCELAR REPORTE"
+                android:text="CANCELAR "
                 android:layout_marginLeft="5dp"
                 android:padding="5dp"
                 android:background="@drawable/rounded_edittext_focused"
@@ -180,4 +176,5 @@
                 android:textColor="@color/blanco"/>
         </LinearLayout>
     </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
