--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="pink">#fe104d</color>
 
     <color name="black_overlay_2">#66000000</color>
+    <color name="un_read">#3F7FBF</color>
 </resources>
