--- a/app/src/main/res/layout/activity_dashad_registroacademico.xml
+++ b/app/src/main/res/layout/activity_dashad_registroacademico.xml
@@ -78,7 +78,7 @@
                             android:gravity="center"
                             android:padding="5dp"
                             android:layout_marginTop="10dp"
-                            android:text="Grados y Secciones"/>
+                            android:text="@string/grados_y_secciones"/>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -89,32 +89,37 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cv_adminasignaturas"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:clickable="true"
                     android:layout_width="160dp"
                     android:layout_height="190dp"
-                    android:layout_margin="10dp">
+                    android:layout_margin="10dp"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:onClick="onClick">
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:orientation="vertical">
+
                         <ImageView
                             android:layout_width="64dp"
                             android:layout_height="64dp"
                             android:background="@drawable/cerclebackgroundmodadmin"
-                            android:src="@drawable/ic_class"
-                            android:padding="10dp"/>
+                            android:padding="10dp"
+                            android:src="@drawable/ic_class" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textStyle="bold"
+                            android:layout_marginTop="10dp"
                             android:gravity="center"
                             android:padding="5dp"
-                            android:layout_marginTop="10dp"
-                            android:text="Asignaturas"/>
+                            android:text="@string/asignaturas"
+                            android:textStyle="bold" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
